--- a/homework/mid7.html
+++ b/homework/mid7.html
@@ -3,20 +3,20 @@
   <meta charset="utf-8" />
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <style>
-    div#app { padding: 20px; margin: 30px auto; max-width: 600px; 
+    div#app { padding: 20px; margin: 30px auto; max-width: 200px; 
       border: 1px solid #ccc; box-shadow: 3px 3px 3px #aaa; }
     input[type=checkbox] { width: 20px; height: 20px; }
+    div#hello { margin: 30px; padding: 50px; 
+      background-color: #ffd; border: 1px solid gray; 
+      text-align: center; font-size: 20pt; }
   </style>
 </head>
 <body>
   <div id="app">
     <h1>
       <button type="button" v-on:click="edit">보이기</button>
-      <button type="button" v-show="unedit">감추기</button>
-      <dlv id = "edit">
-
-
-      </dlv>
+      <button type="button" v-on:click="unedit">감추기</button>
+        <div id="hello" v-show="visible"></div>
     </h1>
   </div>
   <script type="text/javascript">
@@ -24,9 +24,16 @@
       el: '#app',
       data: {
         visible: true
+      },
+      methods: {
+        edit: function () {
+          this.visible = true;
+        },
+        unedit: function () {
+          this.visible = false;
+        }
       }
     })    
    </script>
 </body>    
 </html>
-
